--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <link rel="icon" href="https://pin.it/2DVNimt">
+    <link rel="icon" href="私たちはあなたを愛してます Yuuta Okkotsu.jpg">
+    <title>Thank You >//<</title>
     <style type="text/css">
       @import "style.css"
     </style>
   </head>
 <body>
-  <p>Hello World</p>
+  <h1 align="middle">Halo... Salam Kenal ʕ•́ᴥ•̀ʔっ</h1>
+  <h2 align="middle">Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</h2>
+  <h3 align="middle">..Mari Berteman..</h3>
+  <link rel="icon" href=instagramicon.jpg><p align="middle">@r_ng.ga</p>
   </body>
 </html>
