--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <h1 align="middle">Halo... Salam Kenal ʕ•́ᴥ•̀ʔっ</h1>
   <h2 align="middle">Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</h2>
   <h3 align="middle">..Mari Berteman..</h3>
-  <p align="middle"><img src="instagramicon.jpg" style=width"64";height="64">@r_ng.ga</p>
+  <p align="middle"><img src="instagramicon.jpg" style="width:64;height:64">@r_ng.ga</p>
   </body>
 </html>
