--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <h2 align="middle">Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</h2>
   <h3 align="middle">..Mari Berteman..</h3>
   <p align="middle"><img src="instagramicon.jpg" style="width:10px;height:10px">  @r_ng.ga</p>
+  <p align="middle">(👍≖‿‿≖)👍 👍(≖‿‿≖👍)</p>
   </body>
 </html>
