--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
 <body>
   <p align="middle">(─‿‿─)</p>
-  <h1 align="middle">Halo... Salam Kenal ʕ•́ᴥ•̀ʔっ</h1>
-  <h2 align="middle">Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</h2>
-  <h3 align="middle">..Mari Berteman..</h3>
+  <h1 align="middle">Halo... Salam Kenal ʕ•́ᴥ•̀ʔっ</br>
+  Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</br>
+  ..Mari Berteman..</h1>
   <p align="middle"><img src="instagramicon.jpg" style="width:18px;height:18px">  @r_ng.ga</p>
   <p align="middle">(👍≖‿‿≖)👍 👍(≖‿‿≖👍)</p>
   </body>
