--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <p align="middle">(─‿‿─)</p>
   <h1 align="middle">Halo... Salam Kenal ʕ•́ᴥ•̀ʔっ</br>
-  Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</br>
-  ..Mari Berteman..</h1>
+  Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</h1>
+  <p align="middle">..Mari Berteman..</p>
   <p align="middle"><img src="instagramicon.jpg" style="width:18px;height:18px">  @r_ng.ga</p>
   <p align="middle">(👍≖‿‿≖)👍 👍(≖‿‿≖👍)</p>
   </body>
