--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p align="middle">(─‿‿─)</p>
   <h1 align="middle">Halo... Salam Kenal ʕ•́ᴥ•̀ʔっ</br>
   Terimakasih udh mau foto bareng aku ≧◠‿◠≦✌</h1>
-  <p align="middle">..Mari Berteman..</p>
+    <p align="middle"><font size="4">..Mari Berteman..</p></font>
   <p align="middle"><img src="instagramicon.jpg" style="width:18px;height:18px">  @r_ng.ga</p>
   <p align="middle">(👍≖‿‿≖)👍 👍(≖‿‿≖👍)</p>
   </body>
