--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <style type="text/css">
       @import "style.css"
     </style>
+      <audio hidden autoplay loop>
+    <source src="https://youtu.be/EkHTsc9PU2A" type="audio/mpeg">
+  </audio>
   </head>
 <body>
   <p align="middle">(─‿‿─)</p>
